[project]
name = "teal-api"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Comamoca", email = "comamoca.dev@gmail.com" }
]
dependencies = [
    "fastapi~=0.97.0",
    "uvicorn~=0.22.0",
    "dataset~=1.6.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
